
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 JUL 24a
  * in src/control.c
    - added park1994a and smith1999a to the bibs
  * deleted
    - model/chem/_H2_Air_9s_Smith/doc/townsend/
  * in model/chem/_H2_Air_9s_Smith
    - added contributions from Ajjay Omprakas to chem.c, chem.hh and report.tex
  * in model/chem/_CO2_Plasma_23s_Park
    - added contributions from Aaron Trinh to chem.c, chem.hh and report.tex


2020 JUL 22a
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - added _Tk_smooth()
    - in find_Ek_muk_mem(), now calls _Tk_smooth() instead of _Tk() for electrons
  * in model/fluid/_Favre-Reynolds_plasma/fluid.c
    - in write_model_fluid_template(), reformat_w(), add_dUstar_to_U(),  
      changed wimin, wimax, wemin, wemax to chiimin, chiimax, chiemin, chiemax 
    - deleted reformat_rhok_old()
  * in model/fluid/_Favre-Reynolds_plasma/fluid_plasma.c
    - in find_Dstar(), now find Ve using find_Ve_from_Je() instead of find_Ve_from_J()
  * in model/fluid/_Favre-Reynolds_plasma/fluid_source.c
    - in find_Se() and find_dSe_dU_transport(), changed Ne from _Nesmoothed() to _Nk(np[l],gl,speceminus)
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in add_dUstar_to_U(), added a missing switch case for TEMODEL_TRANSPORT 
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Se() and find_dSe_dU(), added missing switch case for TEMODEL_CONSTANT
    - in find_dSe_dU_transport(), changed Ne from _Nesmoothed() to _Nk(np[l],gl,speceminus)
  * in model/thermo/_generic/thermo.c
    - fixed bug in species NCO NASA Glenn enthalpy polynomial for the third set of coefficients
  * in model/chem/_H2_Air_9s_Smith/doc/report.tex
    - added Smith reactions from Ajjay Omprakas
  * in model/emfield/_Epotential/emfield.c